[SourceKit] Add documentation range in structure (SR-2487) (#11264)